[gd_scene load_steps=2 format=3 uid="uid://c657s2mbjqsf2"]

[ext_resource type="Script" path="res://Scenes/Monkey/MonkeyGui/monkey_gui.gd" id="1_ra2m2"]

[node name="MonkeyGUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 117.0
offset_top = 16.0
offset_right = 117.0
offset_bottom = 16.0
script = ExtResource("1_ra2m2")

[node name="ActionButton" type="Button" parent="."]
layout_mode = 2
offset_left = -116.0
offset_top = -15.0
offset_right = -58.0
offset_bottom = 16.0
text = "Action"

[node name="BladderButton" type="Button" parent="."]
layout_mode = 2
offset_left = -54.0
offset_top = -15.0
offset_right = 68.0
offset_bottom = 16.0
text = "Empty Bladder"

[node name="FeedButton" type="Button" parent="."]
layout_mode = 2
offset_left = 72.0
offset_top = -15.0
offset_right = 117.0
offset_bottom = 16.0
text = "Feed
"

[node name="CancelButton" type="Button" parent="."]
layout_mode = 0
offset_left = 139.0
offset_top = -15.0
offset_right = 171.0
offset_bottom = 16.0
text = "X"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="pressed" from="ActionButton" to="." method="_on_action_button_pressed"]
